# Numerical_Project

./: .gitignore  .pre-commit-config.yaml  README.md  ToyProblem.ipynb  ToyProblem1.ipynb  ToyProblem_1.ipynb  ToyProblem_2.ipynb  TwoBodyResults.ipynb  buildgraph.py  evolution.py  pyproject.toml  requirements.txt
bnn_package/: __init__.py  evolution.py  measure.py
run/: Présentation.ipynb  ToyProblem.ipynb  ToyProblemFN.ipynb  ToyProblem_TE.ipynb  TwoBodyResults.ipynb  analyze.py  cbp.py  debug_entropy.py  generate_config.py  measurements.py  runner.py  simu_evolution.py  testentropy.py  visualization.py  workers.py
run/config/: config_evolution.yaml  config_phasespace.yaml
run/configs/: paper_config_for_CS.yaml  paper_config_for_CS_Diff.yaml
run/notebook/: Présentation.ipynb  Results.ipynb  ToyProblemFN.ipynb  ToyProblem_TE.ipynb
run/run/configs/: Phase_Diagram.yaml  paper_config_for_CS_Diff.yaml
source/: conf.py  index.rst
src/bnn_package/: __init__.py  buildgraph.py  data_processing.py  evolution.py  learning.py  measure.py
testing/: __init__.py  test_buildgraph.py  test_evolution.py  test_measure.py
