[project]
authors = [
  { name = "Roman Beauvallet", email = "roman.beauvallet@ens-lyon.fr" },
  { name = "Constantin Deumier", email = "constantin.deumier@ens-lyon.fr" },
]
dependencies = [
  "datetime>=6.0",
  "entropy",
  "h5py>=3.15.1",
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.7",
  "networkx>=3.5",
  "numba>=0.62.1",
  "numpy>=2.3.5",
  "pathlib>=1.0.1",
  "pytest>=9.0.1",
  "scipy>=1.16.3",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
]
description = "The goal is to build stable functions to study and model a biological neural network through information theory and random matrices."
name = "bnn-package"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "cython>=3.2.1",
  "ipykernel>=7.1.0",
  "nbclassic>=1.3.3",
  "notebook>=7.5.0",
  "pip>=25.3",
  "pre-commit>=4.5.0",
  "rise>=5.7.1",
  "setuptools>=80.9.0",
  "sphinx>=8.2.3",
]

[tool.uv.sources]
entropy = { path = "../DevProject/entropy-4.1.1/src/cython", editable = true }

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
python_files = "test_*.py"
testpaths = ["tests"]

# --- RUFF CONFIGURATION ---
[tool.ruff]
# Exclude the 'run' folder from linting to avoid notebook headaches for now
exclude = ["run/notebook"]
line-length = 88
